[package]
name = "rinha-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", feature = ["v7"] }
