[package]
name = "rinha-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
axum = "0.7.4"
serde = { version = "1.0.195", features = ["derive"] }
time = { version = "0.3.31", features = [
    "macros",
    "serde",
    "formatting",
    "parsing",
] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v7", "serde"] }
